--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -15,5 +15,7 @@
         <li> <%= listing.location %> </li>
         <li> <%= listing.country %> </li>
     </ul>
+    <br>
+    <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
 </body>
 </html>
