--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+<!-- Add layout, boilerplate.ejs to template -->
+<% layout("./layouts/boilerplate") %>
+
 <body>
     <h3>All Listings</h3>
     <form method="GET" action="/listings/new">
@@ -19,4 +15,4 @@
         <% } %>
     </ul>
 </body>
-</html>
+
