--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,18 @@
-body{
+/* body{
     background-color: pink;
+} */
+
+.navbar{
+    height: 5rem;
+    background-color: white;
+}
+
+.fa-compass{
+    color: #fe424d;
+    font-size: 2rem;
+}
+
+.nav-link{
+    /* "!important" To override Bootstrap styling  */
+    color: #222222 !important;
 }
