--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -3,9 +3,9 @@
 
 <body>
     <h3>All Listings</h3>
-    <form method="GET" action="/listings/new">
+    <!-- <form method="GET" action="/listings/new">
         <button>Create New Listing</button>
-    </form>
+    </form> -->
     <ul>
         <% for(let listing of allListing){ %>
             <!--Show Route to show specific data (view)  -->
