--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
-/* body{
-    background-color: pink;
-} */
+body{
+    font-family: "Plus Jakarta Sans", sans-serif !important;
+}
 
 .navbar{
     height: 5rem;
@@ -49,4 +49,38 @@
     justify-content: center;
     align-items: space-evenly;
     text-align: center;
+}
+
+/* Cards */
+.card{
+    border: none !important;
+    margin-bottom: 2rem ;
+}
+
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    /* object-fit: contain !important; */
+}
+
+.card-body{
+    padding: 0 !important;
+}
+
+.card-text p {
+    font-weight: 400;
+}
+
+.listing-link{
+    text-decoration: none;
+}
+
+/* Card Effect */
+.card-img-overlay {
+    opacity: 0;
+}
+
+.card-img-overlay:hover {
+    opacity: 0.2;
+    background-color: white;
 }
