Create Styling New Listing (Page)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,14 @@
 body{
     font-family: "Plus Jakarta Sans", sans-serif !important;
+    /* For footer to stick to bottom */
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.container {
+    /* To occupy min-height */
+    flex: 1;
 }
 
 .navbar{
@@ -83,4 +92,10 @@ body{
 .card-img-overlay:hover {
     opacity: 0.2;
     background-color: white;
+}
+
+/* New Page */
+.add-btn {
+    background-color: #fe424d !important;
+    border: none !important;
 }
