--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,3 +99,9 @@ body{
     background-color: #fe424d !important;
     border: none !important;
 }
+
+/* Edit Page */
+.edit-btn {
+    background-color: #fe424d !important;
+    border: none !important;
+}
