--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,9 +1,9 @@
 <% layout("./layouts/boilerplate") %>
 
-    <div class="row">
+    <div class="row mt-3">
         <!-- "offset" used for, to take the form at center -->
         <div class="col-8 offset-2">
-           <br><br> 
+            
         <h3>Create a New Listing</h3>
         <form method="POST" action="/listings">
             <div class="mb-3">
@@ -39,9 +39,9 @@
                 <input  name="listing[location]" placeholder="Jaipur,Rajasthan" type="text" class="form-control">
             </div>
             
-            <br><br>
-            <button class="btn btn-dark add-btn">Add</button>
-            <br><br>
+            
+            <button class="btn btn-dark add-btn mt-3">Add</button>
+            
         </form>
         </div>
     </div>
