--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,15 +5,15 @@
         <div class="col-8 offset-2">
             
         <h3>Create a New Listing</h3>
-        <form method="POST" action="/listings">
+        <form method="POST" action="/listings" novalidate class="needs-validation">
             <div class="mb-3">
                 <label for="title" class="form-lable">Title</label>
-                <input  name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control">
+                <input  name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required>
             </div>
             
             <div class="mb-3">
                 <label for="description" class="form-lable">Description</label>
-            <textarea name="listing[description]"  type="text" class="form-control"></textarea> 
+            <textarea name="listing[description]"  type="text" class="form-control" required></textarea> 
             </div>
             
             <div class="mb-3">
@@ -24,19 +24,19 @@
             <div class="row">
                 <div class="mb-3 col-md-4">
                     <label for="price" class="form-lable">Price</label>
-                    <input  name="listing[price]" placeholder="1200" type="number" class="form-control">
+                    <input  name="listing[price]" placeholder="1200"  class="form-control" required>
                 </div>
 
                 <div class="mb-3 col-md-8">
                     <label for="country" class="form-lable">Country</label>
-                    <input  name="listing[country]" placeholder="India" type="text" class="form-control">
+                    <input  name="listing[country]" placeholder="India" type="text" class="form-control" required>
                 </div>
             </div>
             
             
             <div class="mb-3">
                 <label for="location" class="form-lable">Location</label>
-                <input  name="listing[location]" placeholder="Jaipur,Rajasthan" type="text" class="form-control">
+                <input  name="listing[location]" placeholder="Jaipur,Rajasthan" type="text" class="form-control" required>
             </div>
             
             
