--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,14 +2,13 @@
 <div class="row">
     <!-- Seprate coloum for heading -->
     <div class="col-8 offset-3 mt-3">
-        <h3>Listing Details</h3>
+        <h3><%= listing.title %></h3>
     </div>
 
     <div class="card col-6 offset-3 show-card">
         <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
             <p class="card-text">
-                <b><%= listing.title %></b> <br>
                 <%= listing.description %> <br>
                 &#x20B9; <%= listing.price.toLocaleString("en-IN") %> <br>
                 <%= listing.location %> <br>
