--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -28,6 +28,22 @@
             <button class="btn btn-dark offset-5">Delete</button>
         </form> 
     </div>
+
+    <div class="col-8 offset-3 ">
+        <hr>
+        <h4>Leave a Review</h4>
+        <form action="" class="mb-3">
+            <div class="mt-3 mb-3">
+                <label for="rating" class="form-lable">Rating</label>
+                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+            </div>
+            <div class="mt-3 mb-3">
+                <label for="comment" class="form-lable">Comments</label>
+                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"></textarea>
+            </div>
+            <button class="btn btn-outline-dark">Submit</button>
+        </form>
+    </div>
  </div>
     
 
