--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -29,10 +29,10 @@
         </form> 
     </div>
 
-    <div class="col-8 offset-3 ">
+    <div class="col-8 offset-3 mb-3">
         <hr>
         <h4>Leave a Review</h4>
-        <form action="" class="mb-3">
+        <form action="/listings/<%= listing.id %>/reviews" method="POST">
             <div class="mt-3 mb-3">
                 <label for="rating" class="form-lable">Rating</label>
                 <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
