--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -32,14 +32,15 @@
     <div class="col-8 offset-3 mb-3">
         <hr>
         <h4>Leave a Review</h4>
-        <form action="/listings/<%= listing.id %>/reviews" method="POST">
+        <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
             <div class="mt-3 mb-3">
                 <label for="rating" class="form-lable">Rating</label>
                 <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
             </div>
             <div class="mt-3 mb-3">
                 <label for="comment" class="form-lable">Comments</label>
-                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"></textarea>
+                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
+                <div class="invalid-feedback">Please submit some comment for review</div>
             </div>
             <button class="btn btn-outline-dark">Submit</button>
         </form>
