--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -44,6 +44,14 @@
             </div>
             <button class="btn btn-outline-dark">Submit</button>
         </form>
+
+        <hr>
+
+    <h4>All Reviews</h4>
+    
+    <% for(review of listing.reviews){ %>
+        <li><%= review.comment %>, <%= review.rating %> stars </li>
+    <% } %>
     </div>
  </div>
     
