--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -11,7 +11,7 @@
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <% for(let listing of allListing){ %>
             <a href="/listings/<%= listing._id %>" class="listing-link">
-                <div class="card col" >
+                <div class="card col listing-card" >
                     <img src="<%= listing.image %>" class="card-img-top" alt="listing_image" style="height: 20rem;" />
                     <!-- "card-img-overlay" add for getting hover effect -->
                     <div class="card-img-overlay"></div>
