--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,7 +5,7 @@
         <h3><%= listing.title %></h3>
     </div>
 
-    <div class="card col-6 offset-3 show-card">
+    <div class="card col-6 offset-3 show-card listing-card">
         <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
             <p class="card-text">
@@ -47,11 +47,19 @@
 
         <hr>
 
-    <h4>All Reviews</h4>
+    <p><b>All Reviews</b></p>
     
+    <div class="row">
     <% for(review of listing.reviews){ %>
-        <li><%= review.comment %>, <%= review.rating %> stars </li>
+        <div class="card col-5 ms-3 mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Jane Doe</h5>
+                <p class="card-text"><%= review.comment %></p>
+                <p class="card-text"><%= review.rating %> stars</p>
+            </div>
+        </div>
     <% } %>
+    </div>
     </div>
  </div>
     
