Flash Success Includes

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,6 +1,8 @@
 <!-- Add layout, boilerplate.ejs to template -->
 <% layout("./layouts/boilerplate") %>
 
+<!-- Flash message -->
+<%= success %>
 <body>
     <h3>All Listings</h3>
     <!-- <form method="GET" action="/listings/new">
