SignUp User - POST

--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -3,7 +3,7 @@
 
 <div class="row mt-3">
 <!-- "offset" used for, to take the form at center -->
-    <h1 class="col-6 offset-3">SignUp on Wandwelust</h1>
+    <h1 class="col-6 offset-3">SignUp on Wanderlust</h1>
     <div class="col-6 offset-3">
         <form action="/signup" method="POST" class="needs-validation" novalidate>
             <div class="mb-3">
