--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,14 +8,12 @@
     <div class="card col-6 offset-3 show-card listing-card">
         <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
-            <p class="card-text">
-                <%= listing.description %> <br>
-                &#x20B9; <%= listing.price.toLocaleString("en-IN") %> <br>
-                <%= listing.location %> <br>
-                <%= listing.country %> <br>
+            <p class="card-text">Owned by <i><%= listing.owner.username %></i> </p>
+            <p class="card-text"> <%= listing.description %> </p>
+            <p class="card-text"> &#x20B9; <%= listing.price.toLocaleString("en-IN") %>  </p>
+            <p class="card-text"> <%= listing.location %> </p>
+            <p class="card-text"> <%= listing.country %> </p>
 
-
-            </p>
         </div>
     </div>   
    
