Authorization for /reviews (part1)

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -20,7 +20,7 @@
 
   <br>
 
-
+    <% if(currUser && listing.owner._id.equals(currUser._id)){ %>
         <div class="btns">
             <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
         
@@ -28,10 +28,12 @@
                 <button class="btn btn-dark offset-5">Delete</button>
             </form> 
         </div>
+    <% } %>
 
 
     <div class="col-8 offset-3 mb-3">
         <hr>
+        <% if(currUser){ %>
         <h4>Leave a Review</h4>
         <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
             <div class="mt-3 mb-3">
@@ -47,6 +49,9 @@
         </form>
 
         <hr>
+        <% } %>
+
+        
 
     <p><b>All Reviews</b></p>
     
