--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -12,7 +12,7 @@
         <% for(let listing of allListing){ %>
             <a href="/listings/<%= listing._id %>" class="listing-link">
                 <div class="card col listing-card" >
-                    <img src="<%= listing.image %>" class="card-img-top" alt="listing_image" style="height: 20rem;" />
+                    <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;" />
                     <!-- "card-img-overlay" add for getting hover effect -->
                     <div class="card-img-overlay"></div>
                     <div class="card-body">
