--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row mt-3">
     <div class="col-8 offset-2">
     <h3>Edit your Listing</h3>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
 
         <div class="mb-3">
             <label for="title" class="form-lable">Title</label>
@@ -17,9 +17,8 @@
         </div>
         
         <div class="mb-3">
-            <label for="image" class="form-lable">Image Link</label>
-            <input  name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" required> 
-            <div class="invalid-feedback">Please enter a valid link for Image</div>
+            <label for="image" class="form-lable">Upload New Image</label>
+            <input  name="listing[image]"  type="file" class="form-control" > 
         </div>
         
         <div class="row">
