--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -21,6 +21,7 @@
             <div class="mb-3">
                 <label for="image" class="form-lable">Upload Listing Image</label>
                 <input  name="listing[image]" type="file" class="form-control">
+                required
             </div>
 
             <div class="row">
