--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,6 +5,7 @@
     #filter {
         display: flex;
         flex-wrap: wrap;
+        align-items: center;
     }
 
     .filter {
@@ -22,6 +23,21 @@
     .filter p{
         font-size: 0.8rem;
     }
+
+    .tax-info {
+        display: none;
+    }
+
+    .tax-toggle {
+        border: 1px solid black;
+        border-radius: 1rem;
+        height: 3.25rem;
+        padding: 1rem;
+        margin-left: 2rem;
+        display: flex;
+        align-items: center;
+    }
+
 </style>
 
 <body>
@@ -75,6 +91,16 @@
             <div><i class="fa-regular fa-snowflake"></i></div>
             <p>Arctic</p>
         </div>
+
+        <div class="filter">
+            <div><i class="fa-solid fa-igloo"></i></div>
+            <p>Domes</p>
+        </div>
+
+        <div class="filter">
+            <div><i class="fa-solid fa-sailboat"></i></div>
+            <p>Boats</p>
+        </div>
         
         <div class="tax-toggle">
             <div class="form-check-reverse form-switch">
@@ -96,6 +122,7 @@
                         <p class="card-text">
                             <b><%= listing.title %></b> <br>
                             &#x20B9;<%= listing.price? listing.price.toLocaleString("en-IN") : "Price not avaliable" %> / night
+                            <i class="tax-info"> &nbsp; &nbsp; +18% GST</i>
                         </p>
                     </div>
                 </div>
@@ -109,6 +136,13 @@
 <script>
     let taxSwitch = document.getElementById("switchCheckDefault");
     taxSwitch.addEventListener("click", () => {
-        console.log("clicked");
+        let taxInfo = document.getElementsByClassName("tax-info");
+        for(info of taxInfo){
+            if(info.style.display != "inline"){
+                info.style.display = "inline";
+            } else{
+                info.style.display = "none";
+            }
+        }
     })
 </script>
